--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nemanja",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^14.5.2"
+    "cypress": "^14.5.2",
+    "cypress-xpath": "^2.0.1"
   }
 }
