--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "triggerAllTests-chrome": "npx cypress run --browser chrome",
     "triggerAllTests-dashboard": "npx cypress run --record --key e21e56e5-bc9f-4270-a065-ed1d60f5d0bd",
     "triggerAllTests-webdriveruni": "npx cypress run --spec cypress/e2e/webdriver-uni/*",
+    "triggerAllTests-teststore": "npx cypress run --spec cypress/e2e/automation-test-store/*",
+    "triggerAllTests-teststore-dashboard": "npx cypress run --spec cypress/e2e/automation-test-store/* --record --key e21e56e5-bc9f-4270-a065-ed1d60f5d0bd",
     "junit-merge": "npx junit-merge -d cypress/results/junit -o cypress/results/junit/results.xml",
     "delete-junit-report": "rm -rf cypress/results/junit/results.xml",
     "delete-results": "rm -rf cypress/results/* || true",
     "mochawesome-merge": "npx mochawesome-merge cypress/results/mochawesome/*.json > mochawesome.json && npx marge mochawesome.json",
     "delete-mochawesome-report": "rm -rf mochawesome-report/* || ture",
     "cypress-regression-pack": "npm run delete-results && npm run delete-mochawesome-report && npm run triggerAllTests-headless && npm run mochawesome-merge",
-    "triggerAllTests-staging": "npx cypress run --env configFile=staging"
+    "triggerAllTests-staging": "npx cypress run --env configFile=staging",
+    "cypress-multi-browser": "npm run triggerAllTests-teststore -- --browser firefox --headed & npm run triggerAllTests-teststore -- --browser edge --headed"
   },
   "author": "Nemanja",
   "license": "ISC",
